--- a/draft/css/style.css
+++ b/draft/css/style.css
@@ -624,12 +624,6 @@ h2.month {
   margin-left: 2px;
 }
 
-#social {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
 /* Media Queries */
 @media screen and (max-width: 540px) {
 	#wrapper { padding:20px 20px 20px 20px;}
@@ -649,4 +643,24 @@ h2.month {
 	.post h2.headline { font-size: 13px; }
 	.post h1 { font-size:24px; }
 	.post h2 { font-size:20px; }
+}
+
+
+/* CUSTOM ADDITIONS */
+
+#social {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+a.symbol {
+    color: #cdd4da;
+    font-size: 2rem;
+    text-decoration: none;
+    margin-right: 0.3rem;
+}
+
+a.symbol:hover {
+    color: #BCD4DA;
 }
