--- a/draft/tags/templates/index.html
+++ b/draft/tags/templates/index.html
@@ -1,20 +1,20 @@
 	<!DOCTYPE html>
-<html >
+<html lang="en-us">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-		
+		<meta name="author" content="C100">
+		<meta name="description" content="Work in progress">
 		<meta name="generator" content="Hugo 0.15" />
-		<title>Templates &middot; </title>
-		<link rel="shortcut icon" href="http://localhost:1313images/favicon.ico">
-		<link rel="stylesheet" href="http://localhost:1313css/style.css">
-		<link rel="stylesheet" href="http://localhost:1313css/highlight.css">
+		<title>Templates &middot; C100</title>
+		<link rel="shortcut icon" href="http://c100.co/images/favicon.ico">
+		<link rel="stylesheet" href="http://c100.co/css/style.css">
+		<link rel="stylesheet" href="http://c100.co/css/highlight.css">
 		
 
 		
-		<link rel="stylesheet" href="http://localhost:1313css/monosocialiconsfont.css">
+		<link rel="stylesheet" href="http://c100.co/css/monosocialiconsfont.css">
 		
 
 		
@@ -24,11 +24,11 @@
 	<nav class="main-nav">
 	
 	
-		<a href='http://localhost:1313'> <span class="arrow">←</span>Home</a>
+		<a href='http://c100.co/'> <span class="arrow">←</span>Home</a>
 	
 
 	
-		<a href='http://localhost:1313about'>About</a>
+		<a href='http://c100.co/about'>About</a>
 	
 
 	
@@ -36,11 +36,14 @@
 	<div class="profile">
     <section id="wrapper">
         <header id="header">
-            <a href='http://localhost:1313about'>
-                <img id="avatar" class="2x" src="http://localhost:1313images/avatar.png"/>
+            <a href='http://c100.co/about'>
+                <img id="avatar" class="2x" src="http://c100.co/images/avatar.png"/>
             </a>
-            <h1></h1>
-            <h2>
+            <h1>C100</h1>
+            <h2>Work in progress</h2>
+        </header>
+    </section>
+</div>
 
 	<section id="wrapper" class="home">
 		<ul id="post-list">
@@ -48,8 +51,8 @@
     
         
             <li>
-                <a href='http://localhost:1313/post/goisforlovers/'><aside class="dates">Apr 2</aside></a>
-                <a href='http://localhost:1313/post/goisforlovers/'>(Hu)go Template Primer <h2></h2></a>
+                <a href='http://c100.co/2014/04/hugo-template-primer/'><aside class="dates">Apr 2</aside></a>
+                <a href='http://c100.co/2014/04/hugo-template-primer/'>(Hu)go Template Primer <h2></h2></a>
             </li>
         
     
@@ -61,7 +64,7 @@
     
     <p class="small">
     
-        © Copyright 2016 
+        © Copyright 2016 C100
     
     </p>
 </footer>
@@ -69,13 +72,13 @@
 	</section>
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="http://localhost:1313js/main.js"></script>
-<script src="http://localhost:1313js/highlight.js"></script>
+<script src="http://c100.co/js/main.js"></script>
+<script src="http://c100.co/js/highlight.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
 
 
 
 
-	<script data-no-instant>document.write('<script src="/livereload.js?mindelay=10"></' + 'script>')</script></body>
+	</body>
 </html>
