--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,6 @@ layout: default
 <article class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date_to_string }}</time>
-  {{ content }}
+  {{ content | extlinks }}
   {% if page.comments %}{% include comments.html %}{% endif %}
 </article>
