--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,15 @@
 
     <div class="container content">
       <header class="masthead">
-        <ul class="social">
-          <li><a href="http://twitter.com/{{ site.twitter }}/" target="_blank"><img src="{{ site.baseurl }}/assets/twitter.svg" alt="t"></a></li>
-          <li><a href="http://www.instagram.com/{{ site.instagram }}/" target="_blank"><img src="{{ site.baseurl }}/assets/instagram.svg" alt="i"></a></li>
-          <li><a href="http://www.facebook.com/{{ site.facebook }}/" target="_blank"><img src="{{ site.baseurl }}/assets/facebook.svg" alt="f"></a></li>
-          <li><a href="{{ site.baseurl }}/atom.xml"><img src="{{ site.baseurl }}/assets/feed.svg" alt="r"></a></li>
-        </ul>
-        <input placeholder="Search&hellip;" type="search" id="search" class="search-input">
+        <div class="hair">
+          <ul class="social">
+            <li><a href="http://twitter.com/{{ site.twitter }}/" target="_blank"><img src="{{ site.baseurl }}/assets/twitter.svg" alt="t"></a></li>
+            <li><a href="http://www.instagram.com/{{ site.instagram }}/" target="_blank"><img src="{{ site.baseurl }}/assets/instagram.svg" alt="i"></a></li>
+            <li><a href="http://www.facebook.com/{{ site.facebook }}/" target="_blank"><img src="{{ site.baseurl }}/assets/facebook.svg" alt="f"></a></li>
+            <li><a href="{{ site.baseurl }}/atom.xml"><img src="{{ site.baseurl }}/assets/feed.svg" alt="r"></a></li>
+          </ul>
+          <input placeholder="Search&hellip;" type="search" id="search" class="search-input">
+        </div>
         <ul class="left-navigation">
           <li><a href="{{ site.baseurl }}/issues/">issues</a></li>
           <li><a href="{{ site.baseurl }}/about/">about</a></li>
