Added search icon and some styling to field

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,10 @@
             <li><a href="http://www.facebook.com/{{ site.facebook }}/" target="_blank"><img src="{{ site.baseurl }}/assets/facebook.svg" alt="f"></a></li>
             <li><a href="{{ site.baseurl }}/atom.xml"><img src="{{ site.baseurl }}/assets/feed.svg" alt="r"></a></li>
           </ul>
-          <input placeholder="Search&hellip;" type="search" id="search" class="search-input">
+          <div class="search">
+            <img src="{{ site.baseurl }}/assets/search.svg" alt="&#1F50D;">
+            <input placeholder="Search&hellip;" type="search" id="search" class="search-input">
+          </div>
         </div>
         <ul class="left-navigation">
           <li><a href="{{ site.baseurl }}/issues/">issues</a></li>
