Added Mallory webfont, polished search box, put in a good chunk of time on the header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,27 +14,44 @@
             <li><a href="http://www.facebook.com/{{ site.facebook }}/" target="_blank"><img src="{{ site.baseurl }}/assets/facebook.svg" alt="f"></a></li>
             <li><a href="{{ site.baseurl }}/atom.xml"><img src="{{ site.baseurl }}/assets/feed.svg" alt="r"></a></li>
           </ul>
-          <div class="search">
+          <div class="search" onclick="$('#search').focus();">
             <img src="{{ site.baseurl }}/assets/search.svg" alt="&#1F50D;">
-            <input placeholder="Search&hellip;" type="search" id="search" class="search-input">
+            <input type="search" id="search" class="search-input">
           </div>
         </div>
-        <ul class="left-navigation">
-          <li><a href="{{ site.baseurl }}/issues/">issues</a></li>
-          <li><a href="{{ site.baseurl }}/about/">about</a></li>
-          <li><a href="{{ site.baseurl }}/newsletter/">newsletter</a></li>
-        </ul>
-        <h3 class="masthead-title">
-          <a href="{{ site.baseurl }}/" title="Home">
-            <img src="{{ site.baseurl }}/assets/c100-logo.svg" alt="C100" onerror="this.src={{ site.baseurl }}/assets/c100-logo.png; this.onerror=null;">
-          </a>
-          <small>{{ site.tagline }}</small>
-        </h3>
-        <ul class="right-navigation">
-          <li><a href="{{ site.baseurl }}/features/">features</a></li>
-          <li><a href="{{ site.baseurl }}/found/">found</a></li>
-          <li><a href="{{ site.baseurl }}/lab/">lab</a></li>
-        </ul>
+        <div class="head">
+          <h3 class="masthead-title">
+            <a href="{{ site.baseurl }}/" title="C100">
+              <img src="{{ site.baseurl }}/assets/c100-logo.svg" alt="C100" onerror="this.src={{ site.baseurl }}/assets/c100-logo.png; this.onerror=null;">
+              {% for item in site.data.decorations %}
+                {% if page.title == item[0] %}
+                  {% assign decorations = true %}
+                  <img src="{{ site.baseurl }}/assets/decorations/{{ item[1].image1 }}" class="decoration">
+                  <img src="{{ site.baseurl }}/assets/decorations/{{ item[1].image2 }}" class="decoration">
+                  {% break %}
+                {% endif %}
+              {% endfor %}
+              {% if decorations != true %}
+                {% assign decorations = site.data.decorations['Home'] %}
+                <img src="{{ site.baseurl }}/assets/decorations/{{ decorations.image1 }}" class="decoration">
+                <img src="{{ site.baseurl }}/assets/decorations/{{ decorations.image2 }}" class="decoration">
+              {% endif %}
+            </a>
+            <small>{{ site.tagline }}</small>
+          </h3>
+          <div class="navigation">
+            <ul class="left">
+              <li><a href="{{ site.baseurl }}/issues/">issues</a></li>
+              <li><a href="{{ site.baseurl }}/about/">about</a></li>
+              <li><a href="{{ site.baseurl }}/newsletter/">newsletter</a></li>
+            </ul>
+            <ul class="right">
+              <li><a href="{{ site.baseurl }}/features/">features</a></li>
+              <li><a href="{{ site.baseurl }}/found/">found</a></li>
+              <li><a href="{{ site.baseurl }}/lab/">lab</a></li>
+            </ul>
+          </div>
+        </div>
       </header>
 
       <div id="results" class="all-posts results"></div>
