--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -1,26 +1,148 @@
-// Masthead
-//
-// Super small header above the content for site name and short description.
-
 .masthead {
   padding-top:    1rem;
   padding-bottom: 1rem;
   margin-bottom: 3rem;
 }
 
-.masthead-title {
-  margin-top: 0;
-  margin-bottom: 0;
-  color: $gray-4;
+.head {
+  position: relative;
+  margin-top: 1.5rem;
 
-  a {
-    color: inherit;
+  .navigation  {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%;
+    text-transform: capitalize;
+
+    .left, .right {
+      display: inline-block;
+      list-style: none;
+      margin: 1rem 0 0 0;
+      padding: 0;
+    }
+
+    .left {
+      float: left;
+
+      li {
+        margin: 0 0.35rem;
+      }
+    }
+
+    .right {
+      float: right;
+
+      &:after {
+        content: '';
+        display: block;
+        clear: both;
+      }
+
+      li {
+        margin: 0 0.75rem;
+      }
+    }
+
+    li {
+      display: inline-block;
+
+      &:first-child {
+        margin-left: 0;
+      }
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      a {
+        display: block;
+        line-height: 28px;
+        box-shadow: inset 0 -3px rgba(0,0,0,0);
+        -webkit-transition: .1s linear box-shadow;
+        -moz-transition: .1s linear box-shadow;
+        transition: .1s linear box-shadow;
+
+        &:hover, &:focus {
+          text-decoration: none;
+        }
+
+        &:hover {
+          box-shadow: inset 0 -3px rgba(0,0,0,1);
+        }
+
+        &:active {
+          position: relative;
+          top: 2px;
+          line-height: 24px;
+        }
+      }
+    }
+
+    a {
+      color: #000000;
+    }
   }
 
-  small {
-    font-size: 75%;
-    font-weight: 400;
-    opacity: .5;
+  .masthead-title {
+    width: 100%;
+    display: block;
+    vertical-align: top;
+    text-align: center;
+    margin: 0 0.5rem;
+    color: #000000;
+
+    a {
+      position: relative;
+      display: inline-block;
+      color: inherit;
+      z-index: 10;
+
+      img:first-child {
+        display: block;
+        width: 15rem;
+        margin: 0 auto;
+        -webkit-filter: drop-shadow(0 0 15px #ececea)drop-shadow(0 0 15px #ececea);
+      }
+
+      &:active img:first-child {
+        position: relative;
+        top: 2px;
+      }
+
+      .decoration {
+        position: absolute;
+        top: 0; left: 0;
+        pointer-events: none;
+        z-index: -1;
+        -webkit-transition: .1s linear -webkit-transform;
+
+        &:nth-child(2) {
+          -webkit-transform: scale(0.5)translateY(-4.5rem)translateX(-6rem)rotate(-55deg);
+        }
+
+        &:nth-child(3) {
+          -webkit-transform: scale(0.7)translateY(-0.25rem)translateX(7rem)rotate(5deg);
+        }
+      }
+
+      &:hover {
+        & .decoration:nth-child(2) {
+          -webkit-transform: scale(0.5)translateY(-4.75rem)translateX(-6.25rem)rotate(-60deg);
+        }
+
+        & .decoration:nth-child(3) {
+          -webkit-transform: scale(0.7)translateY(0rem)translateX(7.25rem)rotate(7.5deg);
+        }
+      }
+    }
+
+    small {
+      position: relative;
+      display: block;
+      margin-top: 0.6rem;
+      font-weight: 400;
+      z-index: 11;
+    }
   }
 }
 
@@ -48,6 +170,7 @@
 
   li {
     display: inline-block;
+    vertical-align: bottom;
     opacity: 0.25;
     -webkit-transition: .1s linear opacity;
     -moz-transition: .1s linear opacity;
@@ -72,22 +195,44 @@
   -moz-transition: .1s linear opacity;
   transition: .1s linear opacity;
 
-  &:hover, &.searching {
-    opacity: 1;
-
-    #search {
-      border-bottom-color: rgba(0,0,0,1);
-    }
-  }
-
   img {
     display: inline-block;
+    vertical-align: bottom;
+    cursor: pointer;
   }
 
   #search {
-    background: transparent;
+    width: 100px;
+    height: 26px;
+    background: rgba(255,255,255,0);
     border: 0;
-    border-bottom: 3px solid rgba(0,0,0,0.4);
+    padding: 7px 5px 3px 0;
+    box-shadow: 0 3px rgba(0,0,0,0.4);
     outline: none;
+    font-family: $root-font-family;
+    font-size: 16px;
+    line-height: 16px;
+    -webkit-appearance: none;
+    -webkit-transition: .1s linear width, .1s linear background;
+    -moz-transition: .1s linear width, .1s linear background;
+    transition: .1s linear width, .1s linear background;
+  }
+
+  &:hover {
+    opacity: 1;
+
+    #search {
+      box-shadow: 0 3px rgba(0,0,0,1);
+    }
+  }
+
+  &.searching {
+    opacity: 1;
+
+    #search {
+      width: 200px;
+      background: rgba(255,255,255,0.4);
+      box-shadow: 0 3px rgba(0,0,0,1);
+    }
   }
 }
