--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,7 +13,7 @@ $blue: #268bd2;
 // $blue: #6a9fb5;
 $brown: #8f5536;
 
-$root-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+$root-font-family: "mallory", "Helvetica Neue", Arial, sans-serif;
 $root-font-size: 16px;
 $root-line-height: 1.5;
 
@@ -23,7 +23,7 @@ $link-color: $blue;
 
 $border-color: #e5e5e5;
 
-$large-breakpoint: 38em;
+$large-breakpoint: 48em;
 $large-font-size: 20px;
 
 $code-font-family: Menlo, Monaco, "Courier New", monospace;
