--- a/styles.scss
+++ b/styles.scss
@@ -3,20 +3,6 @@
 # only main files contain this front matter, not partials.
 ---
 
-//
-//                        ___
-//                       /\_ \
-//  _____     ___     ___\//\ \      __
-// /\ '__`\  / __`\  / __`\\ \ \   /'__`\
-// \ \ \_\ \/\ \_\ \/\ \_\ \\_\ \_/\  __/
-//  \ \ ,__/\ \____/\ \____//\____\ \____\
-//   \ \ \/  \/___/  \/___/ \/____/\/____/
-//    \ \_\
-//     \/_/
-//
-// Designed, built, and released under MIT license by @mdo. Learn more at
-// https://github.com/poole/poole.
-
 @import "variables";
 @import "base";
 @import "type";
@@ -27,3 +13,65 @@
 @import "posts";
 @import "pagination";
 @import "message";
+
+@font-face {
+  font-family: 'mallory';
+  src: url('{{ site.baseurl }}/assets/fonts/mallory_book_regular-webfont.eot');
+  src: url('{{ site.baseurl }}/assets/fonts/mallory_book_regular-webfont.eot?#iefix') format('embedded-opentype'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_book_regular-webfont.woff2') format('woff2'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_book_regular-webfont.woff') format('woff'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_book_regular-webfont.ttf') format('truetype'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_book_regular-webfont.svg#mallory_bookregular') format('svg');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'mallory';
+  src: url('{{ site.baseurl }}/assets/fonts/mallory_book_italic-webfont.eot');
+  src: url('{{ site.baseurl }}/assets/fonts/mallory_book_italic-webfont.eot?#iefix') format('embedded-opentype'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_book_italic-webfont.woff2') format('woff2'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_book_italic-webfont.woff') format('woff'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_book_italic-webfont.ttf') format('truetype'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_book_italic-webfont.svg#mallory_bookitalic') format('svg');
+  font-weight: 400;
+  font-style: italic;
+}
+
+
+
+@font-face {
+  font-family: 'mallory';
+  src: url('{{ site.baseurl }}/assets/fonts/mallory_thin_regular-webfont.eot');
+  src: url('{{ site.baseurl }}/assets/fonts/mallory_thin_regular-webfont.eot?#iefix') format('embedded-opentype'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_thin_regular-webfont.woff2') format('woff2'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_thin_regular-webfont.woff') format('woff'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_thin_regular-webfont.ttf') format('truetype'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_thin_regular-webfont.svg#mallory_thinregular') format('svg');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'mallory';
+  src: url('{{ site.baseurl }}/assets/fonts/mallory_medium_regular-webfont.eot');
+  src: url('{{ site.baseurl }}/assets/fonts/mallory_medium_regular-webfont.eot?#iefix') format('embedded-opentype'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_medium_regular-webfont.woff2') format('woff2'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_medium_regular-webfont.woff') format('woff'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_medium_regular-webfont.ttf') format('truetype'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_medium_regular-webfont.svg#mallory_mediumregular') format('svg');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'mallory';
+  src: url('{{ site.baseurl }}/assets/fonts/mallory_bold_regular-webfont.eot');
+  src: url('{{ site.baseurl }}/assets/fonts/mallory_bold_regular-webfont.eot?#iefix') format('embedded-opentype'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_bold_regular-webfont.woff2') format('woff2'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_bold_regular-webfont.woff') format('woff'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_bold_regular-webfont.ttf') format('truetype'),
+       url('{{ site.baseurl }}/assets/fonts/mallory_bold_regular-webfont.svg#mallory_boldregular') format('svg');
+  font-weight: 600;
+  font-style: normal;
+}
