Added Hoefler Titling font. Made headway on how search works & looks.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -31,6 +31,17 @@ body {
       -ms-text-size-adjust: 100%;
 }
 
+::selection {
+  background: rgba(255,216,0,0.7);
+  color: rgba(0,0,0,0.7);
+  text-shadow: none;
+}
+::-moz-selection {
+  background: rgba(255,216,0,0.7);
+  color: rgba(0,0,0,0.7);
+  text-shadow: none;
+}
+
 // No `:visited` state is required by default (browsers will use `a`)
 a {
   color: $link-color;
