--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -14,6 +14,7 @@ $blue: #268bd2;
 $brown: #8f5536;
 
 $root-font-family: "mallory", "Helvetica Neue", Arial, sans-serif;
+$branch-font-family: "hoefler-titling", "Times New Roman", Times, serif;
 $root-font-size: 16px;
 $root-line-height: 1.5;
 
