--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,19 +23,6 @@
           <h3 class="masthead-title">
             <a href="{{ site.baseurl }}/" title="C100">
               <img src="{{ site.baseurl }}/assets/c100-logo.svg" alt="C100" onerror="this.src={{ site.baseurl }}/assets/c100-logo.png; this.onerror=null;">
-              {% for item in site.data.decorations %}
-                {% if page.title == item[0] %}
-                  {% assign decorations = true %}
-                  <img src="{{ site.baseurl }}/assets/decorations/{{ item[1].image1 }}" class="decoration">
-                  <img src="{{ site.baseurl }}/assets/decorations/{{ item[1].image2 }}" class="decoration">
-                  {% break %}
-                {% endif %}
-              {% endfor %}
-              {% if decorations != true %}
-                {% assign decorations = site.data.decorations['Home'] %}
-                <img src="{{ site.baseurl }}/assets/decorations/{{ decorations.image1 }}" class="decoration">
-                <img src="{{ site.baseurl }}/assets/decorations/{{ decorations.image2 }}" class="decoration">
-              {% endif %}
             </a>
             <small>{{ site.tagline }}</small>
           </h3>
@@ -66,6 +53,8 @@
         </small>
       </footer>
     </div>
+
+    <div class="mark"></div>
 
     <script src="{{ site.baseurl }}/modules/lunr.js/lunr.min.js"></script>
     <script src="{{ site.baseurl }}/js/search.js"></script>
