--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -42,6 +42,27 @@ body {
   text-shadow: none;
 }
 
+.mark {
+  display: block;
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  overflow: hidden;
+  z-index: -1;
+  opacity: 0.5;
+
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0; right: calc(50% - 600px);
+    width: 1200px; height: 800px;
+    background: #fff;
+    -webkit-mask: url('assets/mark.svg') no-repeat 50% -75px;
+    mask: url('assets/mark.svg') no-repeat 50% -75px;
+  }
+}
+
 // No `:visited` state is required by default (browsers will use `a`)
 a {
   color: $link-color;
