--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -19,7 +19,7 @@ $root-font-size: 16px;
 $root-line-height: 1.5;
 
 $body-color: #515151;
-$body-bg: #ececea;
+$body-bg: #f2f2f0;
 $link-color: $blue;
 
 $border-color: #e5e5e5;
