--- a/index.css
+++ b/index.css
@@ -42,31 +42,31 @@ body {
 }
 
 .main {
-	max-width: 340px;
+	max-width: 490px;
 	margin: 0 auto;
-	padding: 2em;
+	padding: 50px;
 }
 
 #mark {
 	display: block;
 	width: 90px;
 	fill: #C7AE95;
-	margin: 3em auto;
+	margin: 25px auto 50px auto;
 }
 
 h2 {
-	font-size: 18px;
+	font-size: 26px;
+	line-height: 40px;
 	text-transform: uppercase;
-	font-weight: bold;
 	color: #573615;
 	letter-spacing: 0.1em;
-	margin-bottom: 1.5em;
+	margin-bottom: 30px;
 }
 
 p {
 	line-height: 26px;
 	letter-spacing: 0.02em;
-	margin-bottom: 1.5em;
+	margin-bottom: 25px;
 }
 
 a {
